# prod-rag-chatbot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  embedding_utils.py  main.py  pdf_utils.py  pyproject.toml  qa_utils.py
frontend/: Dockerfile  app.py  pyproject.toml
